apps/outline/aistor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-aistor
  namespace: outline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: aistor.outline.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: outline-aistor
                port:
                  name: https-minio
            path: /
            pathType: Prefix
  tls:
    - secretName: aistor-outline-${DOMAIN/./-}-tls
      hosts:
        - aistor.outline.${DOMAIN}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline-aistor-console
  namespace: outline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: console.aistor.outline.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: outline-aistor-console
                port:
                  name: https-console
            path: /
            pathType: Prefix
  tls:
    - secretName: console-aistor-outline-${DOMAIN/./-}-tls
      hosts:
        - console.aistor.outline.${DOMAIN}
